--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="portfolio of work for this wdd131 course.">
-    <meta author="Kaylee Wright">
+    <meta name="description" content="portfolio of work for this wdd131 course.">
+    <meta name="author" content="Kaylee Wright">
     <title>Portfolio</title>
 </head>
 <body>
