--- a/week1/mission/index.html
+++ b/week1/mission/index.html
@@ -7,44 +7,52 @@
     <meta name="author" content="Kaylee Wright">
     <title>Mission Statement</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="mission.js" defer></script>
 </head>
 <body>
     <div class="content">
+        <label for="theme-select">Theme:</label>
+        <select name="theme" id="theme-select">
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+        </select>
         <header class="title">
             <h1>MISSION STATEMENT</h1>
             <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
         </header>
         <hr>
         <main>
-            <p>Brigham Young University-Idaho was founded 
-                and is supported and guided by The Church 
-                of Jesus Christ of Latter-day Saints. Its 
-                mission is to develop disciples of Jesus 
-                Christ who are leaders in their homes, the 
-                Church, and their communities.
-            </p>
-            <p><em>The university does this by:</em></p>
-            <ol class="list-of-goals">
-                <li>
-                Building testimonies of the restored gospel
-                of Jesus Christ and fostering its principles 
-                in a wholesome academic, cultural, and social 
-                environment.
-                </li>
-                <li>
-                Providing a high-quality education that 
-                prepares students of diverse interests and 
-                abilities for lifelong learning and employment.
-                </li>
-                <li>
-                Serving as many students as possible within 
-                resource constraints.
-                </li>
-                <li>
-                Delivering education that is affordable for 
-                students and the Church.
-                </li>
-            </ol>
+            <body>
+                <p>Brigham Young University-Idaho was founded 
+                    and is supported and guided by The Church 
+                    of Jesus Christ of Latter-day Saints. Its 
+                    mission is to develop disciples of Jesus 
+                    Christ who are leaders in their homes, the 
+                    Church, and their communities.
+                </p>
+                <p><em>The university does this by:</em></p>
+                <ol class="list-of-goals">
+                    <li>
+                    Building testimonies of the restored gospel
+                    of Jesus Christ and fostering its principles 
+                    in a wholesome academic, cultural, and social 
+                    environment.
+                    </li>
+                    <li>
+                    Providing a high-quality education that 
+                    prepares students of diverse interests and 
+                    abilities for lifelong learning and employment.
+                    </li>
+                    <li>
+                    Serving as many students as possible within 
+                    resource constraints.
+                    </li>
+                    <li>
+                    Delivering education that is affordable for 
+                    students and the Church.
+                    </li>
+                </ol>
+            </body>
         </main>
         <footer>
             <img src="byui-logo_blue.webp" alt="byui logo" class="logo">
