added mission link to main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Kaylee Wright: WDD 131 portfolio</h1>
-        <a></a>
+        <a href="week1/mission/index.html">Mission page</a>
     </header>
     <main>
     </main>
