--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <h1>Kaylee Wright: WDD 131 portfolio</h1>
         <a href="week1/mission/index.html">Mission page</a>
+        <a href="week3/coolpics/index.html">Coolpics</a>
     </header>
     <main>
     </main>
