--- a/week3/coolpics/index.html
+++ b/week3/coolpics/index.html
@@ -9,7 +9,52 @@
     <link rel="stylesheet" href="coolpics.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Cool Pics 📷</h1>
+        <nav>
+            <button>Menu</button>
+            <a href="index.html">Home</a>
+            <a href="index.html">People</a>
+            <a href="index.html">Places</a>
+            <a href="index.html">About</a>
+            <a href="index.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Current Work</h2>
+        <section class="gallery">
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+            <figure>
+                <img src="norris-sm.jpeg" alt="picture">
+            </figure>
+        </section>
+    </main>
+    <footer>
+        <p>©2023 Not a real site 😀</p>
+    </footer>
 </body>
 <script src="coolpics.css"></script>
 </html>
