coolpics with javascript!!

--- a/week3/coolpics/index.html
+++ b/week3/coolpics/index.html
@@ -7,17 +7,20 @@
     <meta name="description" content="this is a site about pics that practices css media queries.">
     <meta name="author" content="Kaylee Wright">
     <link rel="stylesheet" href="coolpics.css">
+    <script src="coolpics.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
-        <nav>
-            <button>Menu</button>
-            <a href="index.html">Home</a>
-            <a href="index.html">People</a>
-            <a href="index.html">Places</a>
-            <a href="index.html">About</a>
-            <a href="index.html">Contact</a>
+        <nav >
+            <button class="menu-button">Menu</button>
+            <div class="menu hide">
+                <a href="index.html">Home</a>
+                <a href="index.html">People</a>
+                <a href="index.html">Places</a>
+                <a href="index.html">About</a>
+                <a href="index.html">Contact</a>
+            </div>
         </nav>
     </header>
     <main>
@@ -56,5 +59,4 @@
         <p>©2023 Not a real site 😀</p>
     </footer>
 </body>
-<script src="coolpics.css"></script>
 </html>
