--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Kaylee Wright: WDD 131 portfolio</h1>
         <a href="week1/mission/index.html">Mission page</a>
         <a href="week3/coolpics/index.html">Coolpics</a>
+        <a href="week5/blog/">Book Blog</a>
     </header>
     <main>
     </main>
