--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="week1/mission/index.html">Mission page</a>
         <a href="week3/coolpics/index.html">Coolpics</a>
         <a href="week5/blog/">Book Blog</a>
+        <a href="week7/creditcard/index.html">Credit Card</a>
     </header>
     <main>
     </main>
