--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="week3/coolpics/index.html">Coolpics</a>
         <a href="week5/blog/">Book Blog</a>
         <a href="week7/creditcard/index.html">Credit Card</a>
+        <a href="week8/register/index.html"></a>
     </header>
     <main>
     </main>
