--- a/week8/register/index.html
+++ b/week8/register/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="register.css" />
+    <script src="register.js" type="module"></script>
   </head>
   <body>
     <div class="testbox">
