added the favicon

--- a/week8/register/index.html
+++ b/week8/register/index.html
@@ -1,7 +1,12 @@
 <html>
   <!-- Example based off of https://www.w3docs.com/learn-html/html-form-templates.html -->
   <head>
+    <meta charset="UTF-8">
     <title>Camp Registration</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a camp registration site. Yay!">
+    <meta name="author" content="Kaylee Wright">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
       rel="stylesheet"
