--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <a href="week3/coolpics/index.html">Coolpics</a>
         <a href="week5/blog/">Book Blog</a>
         <a href="week7/creditcard/index.html">Credit Card</a>
-        <a href="week8/register/index.html"></a>
+        <a href="week8/register/index.html">Register For Camp</a>
+        <a href="week9/recipes/index.html">Recipe Book</a>
     </header>
     <main>
     </main>
