finished recipes pt 2

--- a/week9/recipes/index.html
+++ b/week9/recipes/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://kayleewild.github.io/wdd131/week9/recipes/index.html">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="recipes.css">
-    <script src="main.js" defer></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main>
-        <section class="recipeCard">
+        <!-- <section class="recipeCard">
             <img src="images/apple-crisp.jpg" alt="Apple Crisp">
             <div class="cardText">
                 <div class="tags">
@@ -48,7 +48,7 @@
                 </span>
                 <p class="description">This apple crisp recipe is a simple yet delicious fall dessert that's great served warm with vanilla ice cream.</p>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <div class="social">
