--- a/LazyList/site-plan.html
+++ b/LazyList/site-plan.html
@@ -120,7 +120,7 @@
             <p>Why is it always when we have no spare time that our greatest ideas for emerge? And why is it that when we finally find ourselves with nothing to do, we can rack our brains but those ideas are nowhere to be found? You're busy enough as it is to try and keep track of all the things you want to do when you find the time. Here, you can make note of all the things you'd like to do when that elusive free time rolls around, and then come back to find them all safely waiting for you. Have some lazy time right now? Search through our idea gallery to get an idea of what to do. 
                 Too busy? Take a second to check out our input page and track one of your big ideas to come back for later.</p>
 			<h3>Input Page</h3>
-            <img src="images/beach-background.avif" alt="a orange and blue background that resembles a beach">
+            <img src="images/beach-background.avif" alt="an orange and blue background that resembles a beach">
 			<p>We know you're busy, so we'll keep this quick. Fill out as many of the fields as you need to remember your free time activity for later.</p>
             <p>(Form will include required text input fields for name and description. Other optional fields will include: duration, cost, indoor/outdoor, inspo link, etc.)</p>
 			<h2>Wireframes</h2>
