progress (CSS done)

--- a/LazyList/index.html
+++ b/LazyList/index.html
@@ -14,13 +14,13 @@
     <header>
         <nav>
             <a href="index.html">Search</a>
-            <img src="images/flat-logo.png" alt="lazy list logo">
+            <img src="images/big-logo.png" alt="lazy list logo">
             <a href="input.html">Input</a>
         </nav>
     </header>
     <main>
         <div id="searchDiv">
-            <input type="text" placeholder="Find a recipe" name="search">
+            <input type="text" placeholder="Find freetime fun..." name="search">
             <button type="submit"><img src="images/search.svg" alt="search icon"></button>
         </div>
         <section id="replaceable">
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <img src="images/flat-logo.png" alt="lazy list logo">
+        <img src="images/big-logo.png" alt="lazy list logo">
         <section id="copyright">
             <p>&copy; 2024 Lazy List. Kaylee Wright. All Rights Reserved.</p>
         </section>
