--- a/LazyList/input.html
+++ b/LazyList/input.html
@@ -36,14 +36,14 @@
                     <label for="duration">Duration:</label>
                     <select id="duration" name="duration">
                         <option value="" disabled selected>Select an option</option>
-                        <option value="1">&lt; 5 minutes</option>
-                        <option value="2">5-10 minutes</option>
-                        <option value="3">30 minutes</option>
-                        <option value="4">1 hour</option>
-                        <option value="5">2+ hours</option>
+                        <option value="5">&lt; 5 minutes</option>
+                        <option value="5-10">5-10 minutes</option>
+                        <option value="30">30 minutes</option>
+                        <option value="60">1 hour</option>
+                        <option value="120+">2+ hours</option>
                     </select>
                     <label for="cost">Cost:</label>
-                    <p>$  </p><input type="text" name="cost" id="cost">
+                    <p>$  </p><input type="number" name="cost" id="cost">
                     <label for="location">Location:</label>
                     <select name="location" id="location">
                         <option value="" disabled selected>Select an option</option>
