added to portfolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="week7/creditcard/index.html">Credit Card</a>
         <a href="week8/register/index.html">Register For Camp</a>
         <a href="week9/recipes/index.html">Recipe Book</a>
+        <a href="LazyList/index.html">Lazy List</a>
     </header>
     <main>
     </main>
