added logo for another project

--- a/LazyList/index.html
+++ b/LazyList/index.html
@@ -35,6 +35,7 @@
         <section id="copyright">
             <p>&copy; 2024 Lazy List. Kaylee Wright. All Rights Reserved.</p>
         </section>
+        <a href="more.html" id="more">more</a>
     </footer>
 </body>
 </html>
